--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -22,7 +22,10 @@
       color: chartreuse;
 
     }
-   
+   a:hover{
+     color: olivedrab;
+     background-color: peru;
+   }
     p{
       text-align: center;
     }
