--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -20,6 +20,8 @@
     a{
       text-decoration: none;
       color: tomato;
+      font-size: medium;
+      font-family: 'Times New Roman', Times, serif;
 
     }
    a:hover{
