--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -20,8 +20,9 @@
     a{
       text-decoration: none;
       color: tomato;
-      font-size: medium;
+      font-size: x-large;
       font-family: 'Times New Roman', Times, serif;
+      
 
     }
    a:hover{
