--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -19,14 +19,14 @@
     }
     a{
       text-decoration: none;
-      color: tomato;
+      color: black;
       font-size: x-large;
       font-family: 'Times New Roman', Times, serif;
       
 
     }
    a:hover{
-     color: red;
+     color: darkgrey;
      background-color: peru;
    }
     p{
