--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -26,8 +26,8 @@
 
     }
    a:hover{
-     color: darkgrey;
-     background-color: peru;
+     color: darkslategray;
+     background-color: dimgrey;
    }
     p{
       text-align: center;
