--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -21,6 +21,7 @@
       text-decoration: none;
       color: black;
       font-size: x-large;
+      font-weight: lighter;
       font-family: 'Times New Roman', Times, serif;
       
 
