--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -20,7 +20,7 @@
     a{
       text-decoration: none;
       color: black;
-      font-size: x-large;
+      font-size: large;
       font-weight: lighter;
       font-family: 'Times New Roman', Times, serif;
       
