--- a/html-and-css/tutorial1/contact.html
+++ b/html-and-css/tutorial1/contact.html
@@ -13,9 +13,25 @@
         text-align: center;
 
     }
-    table{
+    h4{
+      display: inline;
       text-align: center;
-      width: 90%;
+    }
+    a{
+      text-decoration: none;
+      color: black;
+      font-size: large;
+      font-weight: lighter;
+      font-family: 'Times New Roman', Times, serif;
+      
+
+    }
+   a:hover{
+     color: darkslategray;
+     background-color: dimgrey;
+   }
+    p{
+      text-align: center;
     }
 </style>
 </head>
