--- a/html-and-css/tutorial1/shop.html
+++ b/html-and-css/tutorial1/shop.html
@@ -7,13 +7,30 @@
     <title>Website</title>
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
-    div {
+   div {
         border:2px solid black;
         width: 900px;
         text-align: center;
 
     }
-    table{
+    h4{
+      display: inline;
+      text-align: center;
+    }
+    a{
+      text-decoration: none;
+      color: black;
+      font-size: large;
+      font-weight: lighter;
+      font-family: 'Times New Roman', Times, serif;
+      
+
+    }
+   a:hover{
+     color: darkslategray;
+     background-color: dimgrey;
+   }
+    p{
       text-align: center;
     }
 </style>
