--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -11,7 +11,10 @@
         border:2px solid black;
         width: 900px;
         text-align: center;
-        padding: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 15px;
+        padding-bottom: 15px;
 
     }
     h4{
