--- a/html-and-css/tutorial1/about.html
+++ b/html-and-css/tutorial1/about.html
@@ -7,10 +7,14 @@
     <title>Website</title>
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
-     div {
+    div {
         border:2px solid black;
         width: 900px;
         text-align: center;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 15px;
+        padding-bottom: 15px;
 
     }
     h4{
