--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -13,8 +13,8 @@
         text-align: center;
         padding-left: 15px;
         padding-right: 15px;
-        padding-top: 0px;
-        padding-bottom:0px;
+        padding-top: 15px;
+        padding-bottom:15px;
 
     }
     h4{
@@ -37,9 +37,13 @@
     p{
       text-align: center;
     }
+    body{ margin:0 auto; 
+    }
+
 </style>
 </head>
 <body>
+  
     <div>
   
      
@@ -71,5 +75,6 @@
       <P> Copyright @ 2021 designed by Sameer </P>
     
 </div>
+
 </body>
 </html>
