--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -11,10 +11,11 @@
         border:2px solid black;
         width: 900px;
         text-align: center;
-        padding-left: 15px;
-        padding-right: 15px;
+        margin-top: auto;
+        margin-bottom: auto;
         padding-top: 15px;
-        padding-bottom:15px;
+        padding-bottom: 15px;
+       
 
     }
     h4{
@@ -37,8 +38,12 @@
     p{
       text-align: center;
     }
-    body{ margin:0 auto; 
-    }
+    html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 </style>
 </head>
