--- a/html-and-css/tutorial1/contact.html
+++ b/html-and-css/tutorial1/contact.html
@@ -8,9 +8,13 @@
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
     div {
-        border:2px solid black;
+      border:2px solid black;
         width: 900px;
         text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
+        padding-top: 15px;
+        padding-bottom: 15px;
 
     }
     h4{
