--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -7,16 +7,20 @@
     <title>Website</title>
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
-    div {
+    .center {
         border:2px solid black;
-        width: 900px;
+        margin: auto;
+        width: 60%;
+        padding: 10px;
         text-align: center;
-        margin-top: auto;
-        margin-bottom: auto;
-        padding-top: 15px;
-        padding-bottom: 15px;
        
 
+    }
+    div{
+        border:2px solid black;
+        margin: auto;
+        width: 61.5%;
+        text-align: center;
     }
     h4{
       display: inline;
@@ -38,18 +42,28 @@
     p{
       text-align: center;
     }
-    html, body {
+    body {
     width: 100%;
     height: 100%;
     padding: 0;
     margin: 0;
 }
-
+html{
+        display: flex;
+        flex-flow: row nowrap;  
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height:100%;
+        margin: 0;
+        padding: 0;
+        background:#eeeeee;
+    }
 </style>
 </head>
 <body>
   
-    <div>
+    <div class="center">
   
      
      <a href="index.html"><h4> Home</h4></a>
