--- a/html-and-css/tutorial1/contact.html
+++ b/html-and-css/tutorial1/contact.html
@@ -7,15 +7,20 @@
     <title>Website</title>
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
-    div {
-      border:2px solid black;
-        width: 900px;
+    .center {
+        border:2px solid black;
+        margin: auto;
+        width: 60%;
+        padding: 10px;
         text-align: center;
-        margin-top: auto;
-        margin-bottom: auto;
-        padding-top: 15px;
-        padding-bottom: 15px;
+       
 
+    }
+    div{
+        border:2px solid black;
+        margin: auto;
+        width: 61.5%;
+        text-align: center;
     }
     h4{
       display: inline;
@@ -40,7 +45,7 @@
 </style>
 </head>
 <body>
-  <div>
+  <div class="center">
   
      
     <a href="index.html"><h4> Home</h4></a>
