--- a/html-and-css/tutorial1/contact.html
+++ b/html-and-css/tutorial1/contact.html
@@ -42,6 +42,17 @@
     p{
       text-align: center;
     }
+    html{
+        display: flex;
+        flex-flow: row nowrap;  
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height:100%;
+        margin: 0;
+        padding: 0;
+        background:#eeeeee;
+    }
 </style>
 </head>
 <body>
