--- a/html-and-css/tutorial1/contact.html
+++ b/html-and-css/tutorial1/contact.html
@@ -42,6 +42,12 @@
     p{
       text-align: center;
     }
+    body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
     html{
         
         margin: 0;
