--- a/html-and-css/tutorial1/about.html
+++ b/html-and-css/tutorial1/about.html
@@ -7,12 +7,20 @@
     <title>Website</title>
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
-    div {
+     .center {
         border:2px solid black;
-        width: 900px;
+        margin: auto;
+        width: 60%;
+        padding: 10px;
         text-align: center;
        
 
+    }
+    div{
+        border:2px solid black;
+        margin: auto;
+        width: 61.5%;
+        text-align: center;
     }
     h4{
       display: inline;
@@ -37,7 +45,7 @@
 </style>
 </head>
 <body>
-  <div>
+  <div class="center">
   
      
     <a href="index.html"><h4> Home</h4></a>
