--- a/html-and-css/tutorial1/about.html
+++ b/html-and-css/tutorial1/about.html
@@ -42,6 +42,23 @@
     p{
       text-align: center;
     }
+    body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+html{
+        display: flex;
+        flex-flow: row nowrap;  
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        height:100%;
+        margin: 0;
+        padding: 0;
+        background:#eeeeee;
+    }
 </style>
 </head>
 <body>
