--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
     .center {
-        border:2px solid black;
+        border: 2px solid yellowgreen;
         margin: auto;
         width: 60%;
         padding: 10px;
