--- a/html-and-css/tutorial1/index.html
+++ b/html-and-css/tutorial1/index.html
@@ -17,7 +17,7 @@
 
     }
     div{
-        border:2px solid black;
+        border:2px solid darkslategrey;
         margin: auto;
         width: 61.5%;
         text-align: center;
