--- a/html-and-css/tutorial1/shop.html
+++ b/html-and-css/tutorial1/shop.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./imgs/icon.png" type="image/x-icon">
     <style>
       .center {
-          border:2px solid black;
+          border:2px solid darkslategrey;
           margin: auto;
           width: 60%;
           padding: 10px;
@@ -17,7 +17,7 @@
   
       }
       div{
-          border:2px solid black;
+          border:2px solid darkslategrey;
           margin: auto;
           width: 61.5%;
           text-align: center;
