--- a/html-and-css/tutorial2/table.html
+++ b/html-and-css/tutorial2/table.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="table.css">
 </head>
 <body>
     <table>
         <tr>
-            <th>Product Name</th>
+            
+            <td colspan="2">Product Name</th>
             <th>Price</th>
             <th>Stock</th>
         </tr>
