--- a/html-and-css/tutorial3/blocklevelEl.html
+++ b/html-and-css/tutorial3/blocklevelEl.html
@@ -24,10 +24,9 @@
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Q1mZ4ADUEZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
-    <iframe src="listElement.html" height="300" width="500"></iframe><br>
+    <iframe src="../tutorial2/listElement.html" height="300" width="500"></iframe><br>
 
-    <video width="450" height="320" src="https://www.w3schools.com/html/mov_bbb.mp4"  controls>
-   
-</video>
+    <video width="450" height="320" src="https://www.w3schools.com/html/mov_bbb.mp4" controls autoplay/>
+
 </body>
 </html>
