--- a/html-and-css/tutorial3/index.html
+++ b/html-and-css/tutorial3/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=J, initial-scale=1.0">
     <title>Javascript</title>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="form.css">
 </head>
+
 <body>
     <!--<script>
         // execute js code here
         alert(1)
         console.log('hello friend')
         alert('hello friends')
-    --></script>
-    <audio src="http://hcmaslov.d-real.sci-nnov.ru/public/mp3/Metallica/Metallica%20'Am%20I%20Evil'.mp3" controls></audio>
+    -->
+    </script>
+    <audio src="http://hcmaslov.d-real.sci-nnov.ru/public/mp3/Metallica/Metallica%20'Am%20I%20Evil'.mp3"
+        controls></audio>
     <!--http://testphp.vulnweb.com/login.php-->
+
     <form action="/post" method="post">
-        <label>User name:</label>
-        <input type="text" placeholder="Enter your username" value="@twitter"/> <br><br>
-        <label>Password:</label>
-        <input type="password" placeholder="enter your password"/><br><br>
-        <label>Email:</label>
-        <input type="email" placeholder="Enter your email"/><br><br>
-        <label>Tel:</label>
-        <input type="text"><br><br>
-        <label>Date:</label>
-        <input type="date" /><br><br>
-        <input type="submit"/><br>
-        <!-- https://www.w3schools.com/html/html_forms.asp -->
+        <div>
+            <label>User name:</label>
+            <input type="text" placeholder="Enter your username" value="@twitter" />
+            <label>Password:</label>
+            <input type="password" placeholder="enter your password" required />
+            <label>Email:</label>
+            <input type="email" placeholder="Enter your email" />
+            <label>Tel:</label>
+            <input type="text">
+            <label>Date:</label>
+            <input type="date" />
+            <input type="submit" />
+            <!-- https://www.w3schools.com/html/html_forms.asp -->
+        </div>
     </form>
 
+
 </body>
+
 </html>
