--- a/html-and-css/tutorial6/index.html
+++ b/html-and-css/tutorial6/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/db93fa7d55.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.0/font/bootstrap-icons.min.css" integrity="sha512-yLNTU6YQWEtsM/WVkUqd2jRzzq5hmfFUMVvziVlkgC0R9HTElDtyF4DiWiBeMS36npvN+NWwrr764A4AWGcmQQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -14,7 +15,9 @@
         <h1>Hello World!</h1>
         <i class="fas fa-cloud-sun myicon"></i>
         <i class="fas fa-football-ball myicon"></i>
+        <i class="bi bi-alarm myicon"></i>
     </div>
+ <!--https://cdnjs.com/libraries/bootstrap-icons-->
 
 </body>
 </html>
