--- a/html-and-css/tutorial7/index.html
+++ b/html-and-css/tutorial7/index.html
@@ -6,21 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/db93fa7d55.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.0/font/bootstrap-icons.min.css" integrity="sha512-yLNTU6YQWEtsM/WVkUqd2jRzzq5hmfFUMVvziVlkgC0R9HTElDtyF4DiWiBeMS36npvN+NWwrr764A4AWGcmQQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">2</div>
-            <div class="col">2</div>
-            <div class="col">2</div>
-        </div>
+        <a href="#" class="btn btn-red">don't click it </a>
+        <a href="#" class="btn btn-yellow">2nd button </a>
+        <a href="#" class="btn btn-orange"><i class="bi bi-alarm"></i> 3rd button </a>
     </div>
- <!--https://cdnjs.com/libraries/bootstrap-icons-->
-
+    <div class="content">
+        <h1>Display content</h1>
+    </div>
 </body>
 </html>
