--- a/html-and-css/Exercise/index.html
+++ b/html-and-css/Exercise/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.0/font/bootstrap-icons.min.css" integrity="sha512-yLNTU6YQWEtsM/WVkUqd2jRzzq5hmfFUMVvziVlkgC0R9HTElDtyF4DiWiBeMS36npvN+NWwrr764A4AWGcmQQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/606913d959.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -25,19 +25,59 @@
         </div>
     </header>
     <main>
-<section class="section">
-    <img src="./lenovo.jpg"><h3>Lenovo Thinkpad laptop</h3>
-    <a href="#" class="link">Buy now </a>
-</section>
-<aside class="aside">
-    <img src="./samsung.jpg"><h3>Samsung Galaxy Tab S7</h3>
-</aside>
-<section class="section">
-    <img src="./smart watch_.jpg"><h3> Samsung Gear S Smartwatch</h3>
-</section>
-    <aside class="aside">
-        <img src="./iphone12.jpg"><h3>Apple IPhone 12 Pro Max 6GB/128GB</h3>
-    </aside>
+        <section class="section">
+            <img class="img1" src="./Lenovo laptop.png">
+            <h3>Lenovo Thinkpad laptop</h3>
+            <p class="p1">Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br><br></p>
+            <p class="p2">pLorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit et deleniti mollitia assumenda corporis accusantium ducimus eligendi, numquam veniam. Qui architecto ducimus libero possimus laboriosam culpa quae tenetur sed</p>
+            <img class="img2" src="./star.jpg">
+            <img class="icon" src="./location.png">
+            <a href="#" class="link"> Buy now </a>
+        </section>
+        <section class="section">
+            <img class="img1" src="./macbook laptop.png">
+            <h3>Macbook Laptop</h3>
+            <p class="p1">Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br><br></p>
+            <p class="p2">pLorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit et deleniti mollitia assumenda corporis accusantium ducimus eligendi, numquam veniam. Qui architecto ducimus libero possimus laboriosam culpa quae tenetur sed</p>
+            <img class="img2" src="./star.jpg">
+            <img class="icon" src="./contact.png">
+            <a href="#" class="link"> Buy now </a>
+        </section>
+        <section class="section">
+            <img class="img1" src="./hp laptop.png">
+            <h3>HP laptop</h3>
+            <p class="p1">Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br><br></p>
+            <p class="p2">pLorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit et deleniti mollitia assumenda corporis accusantium ducimus eligendi, numquam veniam. Qui architecto ducimus libero possimus laboriosam culpa quae tenetur sed</p>
+            <img class="img2" src="./star.jpg">
+            <img class="icon" src="./buy.png">
+            <a href="#" class="link"> Buy now </a>
+        </section>
+        <section class="section">
+            <img class="img1" src="./Dell laptop.png">
+            <h3>Dell laptop</h3>
+            <p class="p1">Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br>
+            Lorem:ipsum<br><br></p>
+            <p class="p2">pLorem ipsum dolor sit amet consectetur adipisicing elit. Quidem velit et deleniti mollitia assumenda corporis accusantium ducimus eligendi, numquam veniam. Qui architecto ducimus libero possimus laboriosam culpa quae tenetur sed</p>
+            <img class="img2" src="./star.jpg">
+            <img class="icon" src="./delivery.png">
+            <a href="#" class="link"> Buy now </a>
+        </section>
+        
     </main>
     <footer>
         <p>Copyright @ designed by Sameer Jahanzeb</p>
