--- a/html-and-css/tutorial10/bootstrap.html
+++ b/html-and-css/tutorial10/bootstrap.html
@@ -7,6 +7,7 @@
     <title>Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 <body>
     <div class="container-fluid p-5 bg-primary text-white text-center">
         <h1>My First Bootstrap Page</h1>
@@ -28,5 +29,6 @@
             </div>
         </div>
     </div>
+    <footer><p>Copyright @ Designed by Sameer JAHANZEB</p></footer>
 </body>
 </html>
