--- a/html-and-css/Bootstrap/tutorial2/index.html
+++ b/html-and-css/Bootstrap/tutorial2/index.html
@@ -9,7 +9,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="m-0 p-0">
 
 <ul class="bg-dark text-light pb-4 pt-4 text-center display-6">
     <li class="d-inline  mx-2 bg-danger p-3">Menu1</li>
@@ -19,5 +19,15 @@
     <li class="d-inline  mx-2 ">Menu5</li>
 
 </ul>
+<div class="container-fluid">
+<div class="row bg-dark text-light">
+    <div class="col-6 m-0 bg-danger p-5 text-center">
+        COLUMN
+    </div>
+    <div class="col-6 m-0 bg-danger p-5 text-center">
+        COLUMN
+    </div>
+    
+</div>
 </body>
 </html>
