--- a/html-and-css/Bootstrap/tutorial2/index.html
+++ b/html-and-css/Bootstrap/tutorial2/index.html
@@ -11,20 +11,25 @@
 </head>
 <body class="m-0 p-0">
 
-<ul class="bg-dark text-light pb-4 pt-4 text-center display-6">
-    <li class="d-inline  mx-2 bg-danger p-3">Menu1</li>
-    <li class="d-inline  mx-2 ">Menu2</li>
-    <li class="d-inline  mx-2 ">Menu3</li>
-    <li class="d-inline  mx-2 ">Menu4</li>
-    <li class="d-inline  mx-2 ">Menu5</li>
+    <ul class="bg-dark text-light pb-4 pt-4 text-center display-6">
+        <li class="d-inline  mx-2 bg-danger p-3">Menu1</li>
+        <li class="d-inline  mx-2 ">Menu2</li>
+        <li class="d-inline  mx-2 ">Menu3</li>
+        <li class="d-inline  mx-2 ">Menu4</li>
+        <li class="d-inline  mx-2 ">Menu5</li>
+    </ul>
 
-</ul>
 <div class="container-fluid">
 <div class="row bg-dark text-light">
-    <div class="col-6 m-0 bg-danger p-5 text-center">
+    <div class="col-md-6 bg-dark p-5 text-center">
         COLUMN
+        <P class="text-muted">This is text-muted kass keyword</P>
+        <P class="lead text-decoration-underline">This is text-muted kass keyword</P>
+        <li class="list-group-item bg-dark text-light ">Hello li!!!!!!</li>
+        <a href="#" class="text-decoration-none">link </a><br>
+        <a href="#" class="text-decoration-line-through">link </a>
     </div>
-    <div class="col-6 m-0 bg-danger p-5 text-center">
+    <div class="col-md-6 bg-danger p-5 text-center">
         COLUMN
     </div>
     
