--- a/html-and-css/Bootstrap/tutorial4/index.html
+++ b/html-and-css/Bootstrap/tutorial4/index.html
@@ -20,11 +20,11 @@
         </div>
         <div class="col-md-8 d-flex justify-content-end">
             <ul>
-                <li class="d-inline">Menu1</li>
-                <li class="d-inline">Menu1</li>
-                <li class="d-inline">Menu1</li>
-                <li class="d-inline">Menu1</li>
-                <li class="d-inline">Menu1</li>
+                <li class="d-inline border-end">Menu1</li>
+                <li class="d-inline border-end">Menu1</li>
+                <li class="d-inline border-end">Menu1</li>
+                <li class="d-inline border-end">Menu1</li>
+                <li class="d-inline border-end">Menu1</li>
             </ul>
         </div>
     </div>
