--- a/html-and-css/Bootstrap/tutorial8/buttons.html
+++ b/html-and-css/Bootstrap/tutorial8/buttons.html
@@ -21,8 +21,35 @@
         <button type="button" class="btn-dark">Dark </button>
         <button type="button" class="btn-light">Light </button>
         <button type="button" class="btn-link">Link </button>
+    </div>
 
-
+    <div class="container">
+        <button type="button" class="btn">Basic</button>
+        <button type="button" class="btn-outline-primary">primary</button>
+        <button type="button" class="btn-outline-secondary">Secondary </button>
+        <button type="button" class="btn-outline-success">Success </button>
+        <button type="button" class="btn-outline-info">Info </button>
+        <button type="button" class="btn-outline-warning">Warning </button>
+        <button type="button" class="btn-outline-danger">Danger </button>
+        <button type="button" class="btn-outline-dark">Dark </button>
+        <button type="button" class="btn-outline-light">Light </button>
+        <button type="button" class="btn-outline-link">Link </button>
+    </div>
+    
+    <div class="container">
+    <button type="button" class="btn-primary btn-lg">Large</button>
+    <button type="button" class="btn-primary">Default</button>
+    <button type="button" class="btn-primary btn-sm">Small</button>
+    </div><br>
+    <div class="d-grid gap-3">
+        <button type="button" class="btn btn-primary btn-block">full width button</button>
+        <button type="button" class="btn btn-primary btn-block">full width button</button>
+        <button type="button" class="btn btn-primary btn-block">full width button</button>
+    </div>
+    <div class="container mt-3">
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary active">Active</button>
+        <button type="button" class="btn btn-primary disabled">Disabled</button> 
     </div>
 </body>
 </html>
