--- a/html-and-css/Bootstrap/tutorial5/forms.html
+++ b/html-and-css/Bootstrap/tutorial5/forms.html
@@ -50,5 +50,19 @@
     <input class="form-check-input bg-warning" type="checkbox"/>
     <label class="form-check-label">Female</label>
 </div>
+<div class="form-check">
+    <input class="form-check-input" type="radio"/>
+    <label class="form-check-label">Remember session</label>
+</div>
+<div class="input-group">
+    <!--range-->
+    <label class="form-range" for="">Volume </label>
+    <input class="form-range" type="range">
+
+</div>
+<div class="input-group">
+    <span class="input-group-text"> Your message: </p>
+    <textarea class="form-control"> lorem ipsum </textarea>
+</div>
 </body>
 </html>
