--- a/html-and-css/Bootstrap/tutorial5/navbar.html
+++ b/html-and-css/Bootstrap/tutorial5/navbar.html
@@ -14,6 +14,7 @@
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
 <link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -80,13 +81,15 @@
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <!--left arrow-->
+            <i class="fas fa-chevron-circle-left h1 text-danger"></i>
+            <!--left arrow-->
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <!--right arrow-->
+            <i class="fas fa-chevron-circle-right h1 text-danger"></i>
+            <!--right arrow-->
         </button>
     </div><br>
 
