--- a/html-and-css/Bootstrap/tutorial5/navbar.html
+++ b/html-and-css/Bootstrap/tutorial5/navbar.html
@@ -82,13 +82,13 @@
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
             <!--left arrow-->
-            <i class="fas fa-chevron-circle-left h1 text-danger"></i>
+            <i id="size" class="fas fa-angle-double-left"></i>
             <!--left arrow-->
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="next">
             <!--right arrow-->
-            <i class="fas fa-chevron-circle-right h1 text-danger"></i>
+            <i id="size" class="fas fa-angle-double-right"></i>
             <!--right arrow-->
         </button>
     </div><br>
