--- a/html-and-css/Bootstrap/tutorial9/badge-intec.html
+++ b/html-and-css/Bootstrap/tutorial9/badge-intec.html
@@ -7,9 +7,12 @@
     <title>Badge</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-
+<!--fa5-$-css- awsomefont link--> 
     <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
@@ -99,7 +102,15 @@
   </div>
 </div><br><br><br>
 
+<!--list group compunent-->
+<ul class="list-group">
+  <li class="list-group-item">Todo1 <i class="fas fa-trash    "></i> <i class="fas fa-archive "></i><i class="fa-light fa-trash-can-plus"></i><i class="fas fa-ambulance"></i></li>
+  <li class="list-group-item">Todo1 <i class="fab fa-alipay"></i></li>
+  <li class="list-group-item">Todo1</li>
+  <li class="list-group-item">Todo1</li>
 
+</ul>
+<!--end of list group compunent-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
