--- a/html-and-css/Bootstrap/tutorial9/nav.html
+++ b/html-and-css/Bootstrap/tutorial9/nav.html
@@ -39,7 +39,15 @@
         </ul>
     </div>
 
-
+    <div class="container mt-3">
+        <ul class="nav nav-pills bg-secondary justify-content-center text-light">
+            <li class="nav-item"><a class="nav-link active" href="#">Link</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+        </ul>
+    </div>
 
     
 </body>
