--- a/html-and-css/Exercise2/card.html
+++ b/html-and-css/Exercise2/card.html
@@ -93,7 +93,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="https://www.mordeo.org/files/uploads/2020/09/The-Batman-2021-4K-Ultra-HD-Mobile-Wallpaper-scaled.jpg" class="card-img-top" alt="...">
+              <img src="https://images.hdqwalls.com/download/batman-jumping-99-1280x2120.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 
                 <a href="#" class="btn btn-primary">Watch online</a>
