--- a/html-and-css/Bootstrap/tutorial9/modal.html
+++ b/html-and-css/Bootstrap/tutorial9/modal.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://picsum.photos/id/237/200/300" data-bs-toggle="modal" data-bs-target="#exampleModal"/>
+       <!-- <img src="https://picsum.photos/id/237/200/300" data-bs-toggle="modal" data-bs-target="#exampleModal"/>-->
         <!-- Button trigger modal -->
-<!--<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
     Launch demo modal
-  </button>>
+  </button>
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
