--- a/javascript/tutorial5/test.html
+++ b/javascript/tutorial5/test.html
@@ -15,7 +15,7 @@
     <button type="button" id="btn" onclick="CalcSum ()">Sum</button><br><br>
     <h1 id="result">Result:0</h1>
     <h2 id="result1">Result:0</h2>
-    <p id="para">Paragraph text:0</p1><br><br>
+    <p id="para">Paragraph text:0</p1><br><br><br><br>
     
         <button type="button" id="btn" onclick="changDirection.turnRight()">Right</button>
         <button type="button" id="btn" onclick="changDirection.turnLeft()">Left</button>
