--- a/javascript/W3Schools/exercise.html
+++ b/javascript/W3Schools/exercise.html
@@ -8,6 +8,24 @@
 </head>
 <body>
     <div id="intec"></div>
+    <h1 id="message">your message is:</h1>
+    <input type="text" id="username" value="root"><br>
+    <button type="button" onclick="MyMessage()">sayMyName</button><br><br>
+
+    <input type="text" id="num1" placeholder="enter a number"><br>
+    <input type="text" id="num2" placeholder="enter a number"><br>
+    <h1 id="result">Result is :</h1>
+    <button type="button" onclick="Calc()">Calculate</button><br><br>
+
+    <button id="right" onclick="AutoController.turnRight()">Turn right</button>
+    <button id="left" onclick="AutoController.turnLeft()">Turn left</button>
+    <button id="forward" onclick="AutoController.forward()">forward</button>
+    <button id="backward" onclick="AutoController.backward()">backward</button>
+
+
+    <h1 id="result2">Result:0</h1>
+  
+
     <script src="exercise.js"></script>
 </body>
 </html>
