--- a/javascript/tutorial5/index.html
+++ b/javascript/tutorial5/index.html
@@ -7,9 +7,9 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <!--<h1 id="message">Hellow World</h1>
+    <h1 id="message">Hellow World</h1>
     <input onclick="" type="text" id="username" value="root">
-    <button onclick="SayMyName()" type="button">Say Ny Name</button>-->
+    <button onclick="SayMyName()" type="button">Say Ny Name</button>
      <!--
     <input type="number" placeholder="number1" id="num1" value="0"><br>
     <input type="number" placeholder="number2" id="num2" value="0"><br><br>
