--- a/javascript/DOM/TodoList/index.html
+++ b/javascript/DOM/TodoList/index.html
@@ -40,7 +40,7 @@
 
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-danger">add todo</button>
+                    <button type="submit" id="btn" class="btn btn-danger">add todo</button>
                     <hr>
                 </form>
 
@@ -53,7 +53,7 @@
                 <h5 class="card-title" id="tasks-title">Todos</h5>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <input class="form-control" type="text" autocomplete="off" name="filter" id="filter" placeholder="Search a todo">
+                        <input class="form-control" type="date" autocomplete="off" name="filter" id="filter" placeholder="Search a todo">
                     </div>
                 </div>
 
@@ -87,7 +87,7 @@
 
     </div>
 
-
+    <script src="app.js"></script>
     <!-- <script src="js/app.js"></script> -->
     <script src="js/todo.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
