--- a/javascript/DOM/WebStorages/tutorial1/index.html
+++ b/javascript/DOM/WebStorages/tutorial1/index.html
@@ -17,7 +17,7 @@
 
     </div>
     <!-- Optional JavaScript -->
-    <script src="bart.js"></script>
+    <script src="sameer.js"></script>
     <script src="sessionstorage.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
