DOM movieDB project

--- a/javascript/DOM/movieDB/index.html
+++ b/javascript/DOM/movieDB/index.html
@@ -46,6 +46,7 @@
                                         <th scope="col">Cover</th>
                                         <th scope="col">Movie Name</th>
                                         <th scope="col">Director</th>
+                                        <th scope="col">Delete</th>
                                         
                                       </tr>
                                     </thead>
@@ -58,6 +59,17 @@
                                         </tr> -->
                                   </tbody>
                                 </table>
+                                <table class="table table-dark">
+                                 
+                                  <tbody id = "films1">
+                                    <!-- <tr>
+                                        <td><img src="https://i.picsum.photos/id/669/200/200.jpg" class="img-fluid img-thumbnail"></td>
+                                        <td>Movie Title</td>
+                                        <td>Movie Director</td>
+                                        <td><a href="#" id = "delete-film" class = "btn btn-danger">Delete Movie</a></td>
+                                      </tr> -->
+                                </tbody>
+                              </table>
                                   </table>
                             <hr>  
                             <a id = "clear-films" class="btn btn-dark" href="#">Delete All Movies</a>               
