--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        cut
+                        Cut the lawn
                     </div>
                 </div>
                 <div class="todo-item">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        cut
+                        Cut the lawn
                     </div>
                 </div>
                 <div class="todo-item">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        cut
+                        Cut the lawn
                     </div>
                 </div>
 
