--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -10,13 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="firebase.js"></script>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </head>
 <body>
     <div class="background-image">
@@ -53,7 +56,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        Cut the lawn
+                        some text here
                     </div>
                 </div>
                 <div class="todo-item">
@@ -63,7 +66,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        Cut the lawn
+                        some text here
                     </div>
                 </div>
                 <div class="todo-item">
@@ -73,7 +76,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                         Cut the lawn
+                        some text here
                     </div>
                 </div>
 
@@ -88,7 +91,7 @@
                     <span>Completed</span>
                 </div>
                 <div class="items-clear">
-                    <span>Clear completed</span>
+                    <button type="button" onclick="remove()">Clear completed</button>
                 </div>
             </div>
         </div>
