--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -18,8 +18,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
-    <script src="firebase.js"></script>
-    <script src="script1.js"></script>
+    
 </head>
 <body>
     <div class="background-image">
@@ -56,7 +55,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        some text here
+                        Cut the lawn
                     </div>
                 </div>
                 <div class="todo-item">
@@ -66,7 +65,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        some text here
+                        Cut the lawn
                     </div>
                 </div>
                 <div class="todo-item">
@@ -76,7 +75,7 @@
                         </div>
                     </div>
                     <div class="todo-text">
-                        some text here
+                         Cut the lawn
                     </div>
                 </div>
 
@@ -91,10 +90,13 @@
                     <span>Completed</span>
                 </div>
                 <div class="items-clear">
-                    <button type="button" onclick="remove()">Clear completed</button>
+                    <span>Clear completed</span>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="firebase.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
