--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -90,12 +90,13 @@
 
                 </div>
                 <div class="items-statuses">
-                    <span onclick="deletAllItem()">Delete-all</span>
-                    |<span id="active">11</span> -Active
+                    
+                    <span id="active"></span> -Active
                     |<span id="demo3"></span> -Completed
                 </div>
                 <div id="items-clear">
-                    <span onClick="deletCompleted()">Clear completed</span>
+                    <span onclick="deletAllItem()">Delete all</span>
+                    <span onClick="deletCompleted()">| Delete completed</span>
                 </div>
             </div>
         </div>
