--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -100,7 +100,9 @@
                 </div>
             </div>
         </div>
+        <footer><p class="footer">Copyright © design by Sameer Jahanzeb</p></footer>
     </div>
+    
     <script src="firebase.js"></script>
     <script src="script.js"></script>
 </body>
