--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="header">
             <div class="title">
-                TODO
+                TODO app
             </div>
             <div class="theme">
                 <img src="./assets/icon-sun.svg">
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <footer><p class="footer">Copyright © design by Sameer Jahanzeb</p></footer>
+        <footer><p class="footer">Copyright © WebDevNov class 2021 design by Sameer Jahanzeb</p></footer>
     </div>
     
     <script src="firebase.js"></script>
