--- a/javascript/CHALLENGE-TODO-APP/index.html
+++ b/javascript/CHALLENGE-TODO-APP/index.html
@@ -15,11 +15,13 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="theme.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://kit.fontawesome.com/f682e3e62b.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -33,7 +35,15 @@
                 TODO 
             </div>
             <div class="theme">
-                <img src="./assets/icon-sun.svg">
+                <div>
+                    <input type="checkbox" class="checkbox" id="chk" />
+                    <label class="label" for="chk">
+                        <i class="fas fa-moon"></i>
+                        <i class="fas fa-sun"></i>
+                        <div class="ball"></div>
+                    </label>
+                </div>
+                
             </div>
 
         </div>
@@ -105,6 +115,7 @@
     
     <script src="firebase.js"></script>
     <script src="script.js"></script>
+    <script src="theme.js"></script>
 </body>
 
 </html>
