--- a/Easy-game/index.html
+++ b/Easy-game/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <title>Jump Game</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/e343b74ac2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="game">
       <div id="character"></div>
-      <div id="block">
-        <img class="img" src="" alt="" />
-      </div>
+     
+        <div  id="addimage" ></div>
+     
     </div>
     <p>Score: <span id="scoreSpan"></span></p>
   </body>
